# go-parallel

./: Pipfile  README.md  go_parallel.py  pyproject.toml
go_parallel/: go_parallel.py
tests/: test.py
