[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "go_parallel"
author = "indrajith"
author-email = "indrajitshetty@gmail.com"
home-page = "https://github.com/indrajith-shetty/go-parallel"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

